# AgentsCollaborationLayer

./: ACL-Introduction.pptx  ACL-Performance-Report.html  ACL-Real-Benchmark-Report.html  ACL-Technical-Manual.docx  ACL_MULTILINE_PROMPT_AUDIT.md  ACL_SKILL_UPDATED.md  Cargo.toml  LICENSE  README.md  acl.skill  build_log.txt
.github/DISCUSSION_TEMPLATE/: welcome.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.skills/acl/: SKILL.md
.skills/acl/references/: workflows.md
.skills/acl/scripts/: acl_client.py  acl_pb2.py  acl_pb2_grpc.py  executor.py  manage_server.sh  orchestrator.py  pipeline.py  profiles.json
acl-core/: Cargo.toml
acl-core/src/: agent_registry.rs  artifact_store.rs  error.rs  event_bus.rs  lib.rs  policy_engine.rs  runtime.rs  spawn_manager.rs  task_graph.rs
acl-demo/: Cargo.toml
acl-demo/src/: main.rs
acl-proto/: Cargo.toml  build.rs
acl-proto/proto/: acl.proto
acl-proto/src/: lib.rs
acl-server/: Cargo.toml
acl-server/src/: lib.rs  main.rs  services.rs
benchmark-results/: benchmark-results.csv  run-benchmark.py
config/: default.toml
sdk/typescript/: package-lock.json  package.json
sdk/typescript/examples/: e2e-pipeline.ts  local-pipeline.ts  multi-model-pipeline.ts  performance-analysis.ts  real-benchmark.ts  real-llm-benchmark.sh
sdk/typescript/game/: .acl-context.json  game.js  index.html  style.css
sdk/typescript/harness/: acl-harness.ts  acl-interactive.ts  cli-adapter.ts  setup.sh
sdk/typescript/src/: cli.ts  index.ts
sdk/typescript/src/adapters/: anthropic-adapter.ts  base-adapter.ts  google-adapter.ts  index.ts  openai-adapter.ts
sdk/typescript/src/core/: acl-runtime.ts  adapter-registry.ts  artifact-store.ts  benchmark.ts  index.ts  policy-engine.ts  spawn-manager.ts  task-graph.ts
sdk/typescript/src/types/: adapter.ts  index.ts  protocol.ts
