[workspace]
members = ["acl-core", "acl-proto", "acl-server", "acl-demo"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ACL Team"]
license = "Apache-2.0"
description = "Agent Collaboration Layer - Non-Linguistic Agent Communication & Orchestration Runtime"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
tonic-build = "0.14"
prost = "0.14"
prost-types = "0.14"
async-nats = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6.1"
thiserror = "2.0"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
bytes = "1"
tokio-stream = "0.1"
