[package]
name = "acl-server"
version.workspace = true
edition = "2021"
description = "gRPC server for Agent Collaboration Layer"

[dependencies]
acl-proto = { path = "../acl-proto" }
acl-core = { path = "../acl-core" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio-stream = { workspace = true }
serde_json = { workspace = true }
